<resources>
    <string name="app_name">Firebase Example</string>
    <string name="action_settings">Configurações</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">ENTRAR</string>
    <string name="sign_in">Inscrever-se</string>
    <string name="finish">Finalizar</string>
    <string name="repeat_password">Repita sua senha</string>
    <string name="full_name">Nome completo</string>
    <string name="try_again">Tentar novamente</string>
    <string name="not_connected">Houve uma falha na conexão =(</string>
    <string name="logout">Logout</string>
    <string name="without_deadline">Sem prazo</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="deadline">Prazo</string>
</resources>